@@ -10,6 +10,7 @@
   added fmt_escapechar* to fmt.h (implement various escaping mechanisms also found in textcode but for a single char not a whole string, and they always escape, not just when they think it's needed)
   scan_ushort was supposed to abort early and return 5 when attempting to parse "65536", because the result does not fit.  It did not.  Now it does.
   scan_*long, scan_*int, scan_*short now properly abort if the number would not fit
+  SECURITY: check for integer overflow in stralloc_ready
 
 0.29:
   save 8 bytes in taia.h for 64-bit systems
